--- a/vignettes/plot_list.Rmd
+++ b/vignettes/plot_list.Rmd
@@ -76,7 +76,7 @@ cov_qq(xpdb_ex_pk)
 ## Kinetic plots
 ### Compartment's amount
 ```{r}
-amt_vs_idv(xpdb_ex_pk)
+amt_vs_idv(xpdb_ex_pk, nrow = 2, ncol = 1)
 ```
 
 ## Visual predictive checks (VPC)
