--- a/vignettes/about.Rmd
+++ b/vignettes/about.Rmd
@@ -4,7 +4,7 @@ author: "Benjamin Guiastrennec"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{About}
+  %\VignetteIndexEntry{About xpose}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
