--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(fig.path   = 'man/figures/',
 [![downloads](https://cranlogs.r-pkg.org/badges/grand-total/xpose)](https://CRAN.R-project.org/package=xpose)
 
 ## Overview
-[xpose](https://UUPharmacometrics.github.io/xpose/) was designed as a [ggplot2](https://ggplot2.tidyverse.org/)-based alternative to [xpose4](http://xpose.sourceforge.net/). xpose aims to reduce the post processing burden and improve diagnostics commonly associated the development of non-linear mixed effect models.
+[xpose](https://UUPharmacometrics.github.io/xpose/) was designed as a [ggplot2](https://ggplot2.tidyverse.org/)-based alternative to [xpose4](https://uupharmacometrics.github.io/xpose4/). xpose aims to reduce the post processing burden and improve diagnostics commonly associated the development of non-linear mixed effect models.
 
 
 ## Installation
