--- a/vignettes/customize_plots.Rmd
+++ b/vignettes/customize_plots.Rmd
@@ -110,7 +110,7 @@ dv_vs_ipred(xpdb,
             point_color = 'blue', point_alpha = 0.5, 
             point_stroke = 0, point_size = 1.5, 
             # Change lines aesthetics 
-            line_alpha = 0.5, line_size = 0.5, 
+            line_alpha = 0.5, line_linewidth = 0.5, 
             line_color = 'orange', line_linetype = 'solid', 
             # Change smooth aesthetics
             smooth_method = 'lm')
